Finish rotation